log
Thu, Apr 17, 2025  9:04:12 PM: 
 hashmap.c | 28 ++++++++++++++++++++++++++++
 1 file changed, 28 insertions(+)
 tests:  1|5
total_score: 10/70
eeef3b7
Thu, Apr 17, 2025  9:50:33 PM: 
 hashmap.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  0|0
01f73f3
Thu, Apr 17, 2025  9:52:18 PM: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 20/70
abf3063
Thu, Apr 17, 2025 10:21:50 PM: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|3
total_score: 40/70
45ebfa4
Fri, Apr 18, 2025  2:02:52 AM: 
 hashmap.c | 23 +++++++++++++++++------
 1 file changed, 17 insertions(+), 6 deletions(-)
 tests:  6|3
total_score: 40/70
184ef58
Fri, Apr 18, 2025  2:06:21 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
63e9628
Fri, Apr 18, 2025  2:08:54 AM: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  6|3
total_score: 40/70
401a3f0
Fri, Apr 18, 2025  2:12:10 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|3
total_score: 40/70
aaccf59
Fri, Apr 18, 2025  2:16:51 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|2
total_score: 50/70
1f295a5
Fri, Apr 18, 2025  2:41:42 AM: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:102:21: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     long posicion = searchMap (map, key);
                     ^~~~~~~~~
cc1.exe: all warnings being treated as errors
13b1ebb
Fri, Apr 18, 2025  2:46:47 AM: 
 hashmap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  12|1
total_score: 60/70
c9084ee
Fri, Apr 18, 2025  2:58:21 AM: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  13|1
total_score: 60/70
0e5126b
Fri, Apr 18, 2025  3:20:51 AM: 
 hashmap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  14|1
total_score: 60/70
f34b825
